                            =======================
                            History For AdvanceCOMP
                            =======================


1 ADVANCECOMP VERSION 1.12 2004/08
==================================



2 ADVANCECOMP VERSION 1.11 2004/07
==================================

* Fixed a FreeBSD libc compatibility issue recompressing
  .gz files [Radim Kolar].
* Fixed a segmentation fault when some invalid
  compressed .zip files are tested.


3 ADVANCECOMP VERSION 1.10 2004/04
==================================

* Added support for alpha channel and the new -n option
  at advmng.
* Fixed the uncompressing error "Invalid compressed data in ..."
  with some GZIP files [Christian Lestrade].


4 ADVANCECOMP VERSION 1.9 2003/11
=================================

* Added support for .tgz files at advdef.
* Added the -a option at advmng to create .mng files from
  a sequence of .png files.


5 ADVANCECOMP VERSION 1.8 2003/10
=================================

* Added support for .gz files at advdef.
* Fixed support for .png files with splitted IDATs.


6 ADVANCECOMP VERSION 1.7 2003/08
=================================

* Fixed a Segmentation Fault bug on the advmng -r option on
  the latest gcc.
* Better and faster (MMX) move recognition in the advmng scroll
  compression.
* The frame reduction of the advmng utility is now done only if possible.
  The compression process never fails.
* Added a new -S (--scroll-square) option at advmng.
* Added a new -v (--verbose) option at advmng to show the
  compression status.
* Changed the internal ID for the bzip2 and LZMA compression.
  The bzip2 ID is now compatible with the PKWARE specification.
* Added support for RGB images with alpha channel at the advpng utility.
* Updated with automake 1.7.6.


7 ADVANCECOMP VERSION 1.6 2003/05
=================================

* Added the `-x' option at the advmng utility to export .png files
  from a .mng clip. Useful to compress it in an MPEG file.