@@ -1,7 +1,11 @@
 .TH "History For AdvanceCOMP" 1
 .SH NAME
 advcomp \(hy History For AdvanceCOMP
-.SH ADVANCECOMP VERSION 1.12 2004/08 
+.SH ADVANCECOMP VERSION 1.12 2004/09 
+.PD 0
+.IP \(bu
+Fixed a compilation problem with gcc 3.4.
+.PD
 .SH ADVANCECOMP VERSION 1.11 2004/07 
 .PD 0
 .IP \(bu
