@@ -5,8 +5,13 @@
 <body>
 <h2><center>History For AdvanceCOMP</center></h2>
 <h2>1 
-AdvanceCOMP Version 1.12 2004/08
+AdvanceCOMP Version 1.12 2004/09
 </h2>
+<ul>
+<li>
+Fixed a compilation problem with gcc 3.4.
+</li>
+</ul>
 <h2>2 
 AdvanceCOMP Version 1.11 2004/07
 </h2>
